// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dates does not render without a start and end date 1`] = `null`;

exports[`Dates renders correctly 1`] = `
<p
  className="sc-AxjAm vpaa"
  fontSize={0}
>
  Jan 2017 - Dec 2017
</p>
`;

exports[`Dates renders with the end date as present 1`] = `
<p
  className="sc-AxjAm vpaa"
  fontSize={0}
>
  Jan 2017 - Present
</p>
`;
